--- a/generators/app/templates/_config.xml
+++ b/generators/app/templates/_config.xml
@@ -19,8 +19,8 @@
     <preference name="SplashScreen" value="screen"/>
     <preference name="FadeSplashScreen" value="false"/>
     <preference name="ShowSplashScreenSpinner" value="false"/>
-    <preference name="AutoHideSplashScreen" value="false"/>
-    <preference name="SplashShowOnlyFirstTime" value="false"/>
+    <preference name="AutoHideSplashScreen" value="true"/>
+    <preference name="SplashShowOnlyFirstTime" value="true"/>
     <preference name="KeyboardDisplayRequiresUserAction" value="false"/>
     <preference name="orientation" value="portrait"/>
     <feature name="StatusBar">
