--- a/generators/page/templates/<%= cameledName %>/_<%= cameledName %>.html
+++ b/generators/page/templates/<%= cameledName %>/_<%= cameledName %>.html
@@ -4,7 +4,7 @@
     <h1 class="title"><%= cameledName %></h1>
   </ion-header-bar>
 
-  <ion-content class="<%= cameledName %>">
+  <ion-content class="<%= className %>">
     I am <%= cameledName %>
   </ion-content>
 
