1. page hang issue on android 4; 2. use ionic.bundle.js; 3. support use bower managed scss

--- a/generators/app/templates/app/src/_index.html
+++ b/generators/app/templates/app/src/_index.html
@@ -15,11 +15,8 @@
   </head>
   <body ng-app="<%= appName %>">
     <ion-nav-view></ion-nav-view>
-    <!-- inject:vendor:js -->
-    <!-- endinject -->
-
-    <!-- inject:app:js -->
-    <!-- endinject -->
-    <script src="cordova.js"></script>
+    <!-- inject:vendor:js --><!-- endinject -->
+    <!-- build:cordova --><!-- endbuild -->
+    <!-- inject:app:js --><!-- endinject -->
   </body>
 </html>
