--- a/generators/app/templates/app/src/pages/main/main.html
+++ b/generators/app/templates/app/src/pages/main/main.html
@@ -2,7 +2,7 @@
   <!-- Center content -->
   <ion-side-menu-content>
 
-    <ion-nav-view name="viewContent"></ion-nav-view>
+    <ion-nav-view name="app"></ion-nav-view>
   </ion-side-menu-content>
 
   <!-- Left menu -->
