--- a/generators/page/templates/<%= cameledName %>/_<%= cameledName %>.html
+++ b/generators/page/templates/<%= cameledName %>/_<%= cameledName %>.html
@@ -1,11 +1,5 @@
-<ion-view>
-  <ion-header-bar align-title="center" class="bar-positive">
-    <button class="button button-icon icon ion-navicon" menu-toggle="left"></button>
-    <h1 class="title"><%= cameledName %></h1>
-  </ion-header-bar>
-
+<ion-view view-title="<%= cameledName %>">
   <ion-content class="<%= className %>">
     I am <%= cameledName %>
   </ion-content>
-
 </ion-view>
